--- a/firstlightdemo/Server/appsettings.json
+++ b/firstlightdemo/Server/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=Firstlight;",
+    "myDb1": "Server=myServer;Database=myDb1;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
